<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 ForgeRock. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/baseline_account_balance_24"
                android:title="@string/menu_account_overview" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_transfer" />
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
    </group>

    <item android:title="Security">
        <menu>
            <item
                    android:id="@+id/nav_biometric"
                    android:icon="@drawable/ic_baseline_biometric"
                    android:title="@string/menu_biometric" />
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_exit_to_app_24"
                    android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
