<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 ForgeRock. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="org.forgerock.pebblebank.ui.overview.OverviewFragment"
            android:label="@string/menu_account_overview"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_gallery"
            android:name="org.forgerock.pebblebank.ui.transfer.GalleryFragment"
            android:label="@string/menu_transfer"
            tools:layout="@layout/fragment_transfer" />

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="org.forgerock.pebblebank.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />

    <fragment
            android:id="@+id/nav_tools"
            android:name="org.forgerock.pebblebank.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_biometric"
            android:name="org.forgerock.pebblebank.ui.biometric.BiometricFragment"
            android:label="@string/menu_biometric"
            tools:layout="@layout/fragment_share" />

    <fragment
            android:id="@+id/nav_logout"
            android:name="org.forgerock.pebblebank.ui.logout.LogoutFragment"
            android:label="@string/menu_logout"
            tools:layout="@layout/fragment_send" />

</navigation>